# parse_wiktionary_en

./: Cargo.toml  readme.md
examples/: main.rs
src/: configuration.rs  definition.rs  inflection.rs  language.rs  lib.rs  pos.rs  pronunciation.rs  supplementary.rs  template.rs  usage_notes.rs  util.rs
tests/: main.rs
